[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sergio Merino Hernández <sergiohdez94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
